added backup file option

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.dot": "dot",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "iostream": "cpp",
+        "iosfwd": "cpp"
     }
 }
